[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Banner" type="Button" parent="."]
margin_left = 390.145
margin_top = 139.546
margin_right = 472.145
margin_bottom = 168.546
text = "Banner"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Intertitial" type="Button" parent="."]
margin_left = 375.0
margin_top = 188.8
margin_right = 482.0
margin_bottom = 218.8
text = "Intertitial"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reward" type="Button" parent="."]
margin_left = 383.109
margin_top = 235.6
margin_right = 476.109
margin_bottom = 267.6
text = "Reward"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Banner" to="." method="_on_Banner_pressed"]
[connection signal="pressed" from="Intertitial" to="." method="_on_Intertitial_pressed"]
[connection signal="pressed" from="Reward" to="." method="_on_Reward_pressed"]
